--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/pwa": "^0.8.7",
     "@angular/router": "^6.1.0",
+    "@angular/service-worker": "^6.1.0",
     "core-js": "^2.5.4",
     "ngx-loading": "^3.0.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular/cli": "~6.2.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
